# jc-solver

./: README.md  jc-solver.cabal
extra/jc-puzzles/: bear  example  example.pbm
src/: Main.hs  test-01.hs
src/JCSolver/: BitMask.hs  Block.hs  Cell.hs  LineMask.hs  Solve.hs  Syncable.hs
src/JCSolver/.svn/: all-wcprops  entries
src/JCSolver/.svn/text-base/: Completable.hs.svn-base  Field.hs.svn-base  Line.hs.svn-base  Opts.hs.svn-base  Pbm.hs.svn-base  Utils.hs.svn-base
test/: Main.hs
