name:           jc-solver
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
license:        MIT
synopsis:       Japanese crosswords solver
copyright:      Vyacheslav Dubinin <vyacheslav.dubinin@gmail.com>
homepage:       http://code.google.com/p/jc-solver/

executable jc-solver
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:  JCSolver.BitMask,
                  JCSolver.Block,
                  JCSolver.Cell,
                  JCSolver.Completable,
                  JCSolver.Field,
                  JCSolver.Line,
                  JCSolver.LineMask,
                  JCSolver.Opts,
                  JCSolver.Pbm,
                  JCSolver.Solve,
                  JCSolver.Syncable,
                  JCSolver.Utils
  build-depends:  base >= 4,
                  bytestring,
                  parsec,
                  QuickCheck >= 2.4
  ghc-options:    -Wall -O2

test-suite jc-solver-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is:        Main.hs
  other-modules:  JCSolver.BitMask
  build-depends:  base >= 4,
                  QuickCheck >= 2.4,
                  test-framework >= 0.4.1,
                  test-framework-quickcheck2
  ghc-options:    -Wall
